src/OpenCvSharp/Internal/Interop/NativeMethods.Features2D.XFeatures2D.LibraryImport.cs


        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_kaze_set_diffusivity")]
        internal static partial int Features2DKazeSetDiffusivity(IntPtr kaze, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_akaze_create")]
        internal static partial int Features2DAkazeCreate(int descriptorType, int descriptorSize, int descriptorChannels, float threshold, int nOctaves, int nOctaveLayers, int diffusivity, int maxPoints, out IntPtr akaze);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_akaze_release")]
        internal static partial void Features2DAkazeRelease(IntPtr akaze);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_akaze_clear")]
        internal static partial int Features2DAkazeClear(IntPtr akaze);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_akaze_empty")]
        internal static partial int Features2DAkazeEmpty(IntPtr akaze, out int empty);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_akaze_descriptor_size")]
        internal static partial int Features2DAkazeDescriptorSize(IntPtr akaze, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_akaze_descriptor_type")]
        internal static partial int Features2DAkazeDescriptorType(IntPtr akaze, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_akaze_default_norm")]
        internal static partial int Features2DAkazeDefaultNorm(IntPtr akaze, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_akaze_detect_count")]
        internal static partial int Features2DAkazeDetectCount(IntPtr akaze, IntPtr image, IntPtr mask, out int keypointCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_akaze_detect_fill")]
        internal static partial int Features2DAkazeDetectFill(IntPtr akaze, IntPtr image, IntPtr mask, NativeKeyPoint* keypoints, int keypointCapacity, out int keypointCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_akaze_compute")]
        internal static partial int Features2DAkazeCompute(IntPtr akaze, IntPtr image, NativeKeyPoint* keypointsIn, int keypointCount, NativeKeyPoint* keypointsOut, int keypointCapacity, out int writtenKeypointCount, IntPtr descriptors);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_akaze_detect_and_compute_count")]
        internal static partial int Features2DAkazeDetectAndComputeCount(IntPtr akaze, IntPtr image, IntPtr mask, NativeKeyPoint* keypointsIn, int keypointCount, int useProvidedKeypoints, out int outputKeypointCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_akaze_detect_and_compute_fill")]
        internal static partial int Features2DAkazeDetectAndComputeFill(IntPtr akaze, IntPtr image, IntPtr mask, NativeKeyPoint* keypointsIn, int keypointCount, int useProvidedKeypoints, NativeKeyPoint* keypointsOut, int keypointCapacity, out int outputKeypointCount, IntPtr descriptors);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_akaze_default_name_length")]
        internal static partial int Features2DAkazeDefaultNameLength(IntPtr akaze, out int length);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_akaze_default_name_fill")]
        internal static partial int Features2DAkazeDefaultNameFill(IntPtr akaze, byte* buffer, int bufferCapacity, out int written);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_akaze_get_descriptor_type")]
        internal static partial int Features2DAkazeGetDescriptorType(IntPtr akaze, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_akaze_set_descriptor_type")]
        internal static partial int Features2DAkazeSetDescriptorType(IntPtr akaze, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_akaze_get_descriptor_size")]
        internal static partial int Features2DAkazeGetDescriptorSize(IntPtr akaze, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_akaze_set_descriptor_size")]
        internal static partial int Features2DAkazeSetDescriptorSize(IntPtr akaze, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_akaze_get_descriptor_channels")]
        internal static partial int Features2DAkazeGetDescriptorChannels(IntPtr akaze, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_akaze_set_descriptor_channels")]
        internal static partial int Features2DAkazeSetDescriptorChannels(IntPtr akaze, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_akaze_get_threshold")]
        internal static partial int Features2DAkazeGetThreshold(IntPtr akaze, out double value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_akaze_set_threshold")]
        internal static partial int Features2DAkazeSetThreshold(IntPtr akaze, double value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_akaze_get_n_octaves")]
        internal static partial int Features2DAkazeGetNOctaves(IntPtr akaze, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_akaze_set_n_octaves")]
        internal static partial int Features2DAkazeSetNOctaves(IntPtr akaze, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_akaze_get_n_octave_layers")]
        internal static partial int Features2DAkazeGetNOctaveLayers(IntPtr akaze, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_akaze_set_n_octave_layers")]
        internal static partial int Features2DAkazeSetNOctaveLayers(IntPtr akaze, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_akaze_get_diffusivity")]
        internal static partial int Features2DAkazeGetDiffusivity(IntPtr akaze, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_akaze_set_diffusivity")]
        internal static partial int Features2DAkazeSetDiffusivity(IntPtr akaze, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_akaze_get_max_points")]
        internal static partial int Features2DAkazeGetMaxPoints(IntPtr akaze, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_akaze_set_max_points")]
        internal static partial int Features2DAkazeSetMaxPoints(IntPtr akaze, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_affine_create_from_brisk")]
        internal static partial int Features2DAffineCreateFromBrisk(IntPtr backend, int maxTilt, int minTilt, float tiltStep, float rotateStepBase, out IntPtr affine);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_affine_create_from_kaze")]
        internal static partial int Features2DAffineCreateFromKaze(IntPtr backend, int maxTilt, int minTilt, float tiltStep, float rotateStepBase, out IntPtr affine);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_affine_create_from_akaze")]
        internal static partial int Features2DAffineCreateFromAkaze(IntPtr backend, int maxTilt, int minTilt, float tiltStep, float rotateStepBase, out IntPtr affine);
    }
}
#endif
